# ahc008

./: .gitignore  Makefile  README.md  local_test.py  main.py  main_nohints.py  pyproject.toml  strip_hints.py
.github/actions/: action.yml
.github/workflows/: test.yml
notebook/: Untitled.ipynb  nearest_path.ipynb
tools/: out.txt
tools/manual/in/: 0000.txt
