[tool.poetry]
name = "ahc008"
version = "0.1.0"
description = ""
authors = ["takizawa <kei.cataract@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
black = "^22.1.0"
mypy = "^0.931"
jupyterlab = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
